--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <h1 style="display: none">fylo</h1>
   <div class="bg--image"></div>
   <main>
     <div class="card">
@@ -24,13 +25,13 @@
         </div>
         <div class="card__buttons">
           <a href="">
-            <img src="./images/icon-document.svg" alt="">
+            <img src="./images/icon-document.svg" alt="document icon">
           </a>
           <a href="">
-            <img src="./images/icon-folder.svg" alt="">
+            <img src="./images/icon-folder.svg" alt="folder icon">
           </a>
           <a href="">
-            <img src="./images/icon-upload.svg" alt="">
+            <img src="./images/icon-upload.svg" alt="upload icon">
           </a>
         </div>
       </div>
